# claude-memory-engine

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
claude-integration/: CLAUDE.snippet.md  INSTALL.md  settings.snippet.json
claude-integration/skills/capture-memory/: SKILL.md
claude-integration/skills/recall-memory/: SKILL.md
docs/superpowers/plans/: 2026-06-05-memory-engine-phase1-core-db.md  2026-06-05-memory-engine-phase2a-auto-retrieval.md  2026-06-05-memory-engine-phase2b-explicit-recall.md  2026-06-05-memory-engine-phase3-inline-capture.md  2026-06-06-memory-engine-phase4a-ops-safety.md
docs/superpowers/specs/: 2026-06-05-claude-code-memory-engine-design.md
src/memory_engine/: __init__.py  backup.py  cli.py  control.py  db.py  formatting.py  fts_query.py  models.py  normalizer.py  parser.py  paths.py  repository.py  scope.py
tests/: conftest.py  test_backup.py  test_cli.py  test_cli_edit.py  test_cli_inject.py  test_cli_recall.py  test_cli_session_init.py  test_control.py  test_db.py  test_db_recovery.py  test_formatting.py  test_fts_query.py  test_normalizer.py  test_parser.py  test_paths.py  test_repository_capture.py  test_repository_edit.py  test_repository_explicit.py  test_repository_fuzzy.py  test_repository_lifecycle.py  test_repository_retrieve.py  test_scope.py
