[project]
name = "memory-engine"
version = "0.1.0"
description = "Local SQLite memory engine for Claude Code"
requires-python = ">=3.10"

[project.scripts]
memory-engine = "memory_engine.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
